<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/new_script"
            android:title="@string/menu_home"
            app:actionLayout="@layout/menu_demo"
        />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/new_script"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/list_two"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/new_script"
            android:title="@string/all_script" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/folder"
            android:icon="@drawable/folder"
            app:actionLayout="@layout/menu_demo"
            android:title="@string/folder" />
        <item
            android:id="@+id/public_talk"
            android:icon="@drawable/public_talk_folder"
            android:title="@string/public_talk" />


    </group>





</menu>
