<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Reset_Password">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/rl_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:background="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:hint="@string/reset_password"
                    android:textSize="@dimen/_15ssp"


                    >

                </TextView>

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_back"
            android:background="#E4DFDF">


        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_back"
            android:layout_marginTop="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_passwordd"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_22ssp"
                        android:textStyle="bold">


                    </TextView>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp">

                    <EditText
                        android:id="@+id/et_resetpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:lines="1"
                        android:inputType="text"
                        android:hint="@string/emai_addreess"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"></EditText>


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="#000">

                </View>


                <RelativeLayout
                    android:id="@+id/rl_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center">


                    <TextView
                        android:id="@+id/tv_resetpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_button"
                        android:gravity="center"
                        android:text="Sent"
                        android:textColor="#fff"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold">


                    </TextView>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="40dp"
               android:layout_gravity="center"
android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="We'll email you a link to reset the password"
                        android:textColor="#787878"
                        android:textSize="@dimen/_11ssp">


                    </TextView>


                </RelativeLayout>


            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>